2011-07-08  vadim  <vadim@netcitadel.com>

	* objectSignature.cpp: fixes #2559 "Crash on import when at least
	one DynamicGroup object already exists in the object tree."

2011-07-07  Vadim Kurland  <vadim@netcitadel.com>

	* RoutingCompiler.cpp (processNext): see #2191 "Crash when
	compiling a route with table object". Compiler for PF crashed
	when run-time AddressTable object was used in RDst of a routing
	rule.

	* PFImporter.cpp (makeAddressObj): see #2546 "PF import - negation
	inside of inline tables is ignored". Since we can not import
	address lists or tables that contain a mix of negated and
	non-negated items, importer should display an error when it
	enounters one of these and mark all rules that use it as "broken"
	(rule is colored red and error message is added to the comment).

	* PFImporter.cpp (makeAddressObj): see #2556 "PF import: impor of
	rules referring to undefined macros". If pf.conf file uses an
	undefined macro (there is $macro somewhere but the macro has never
	been defined), importer issues a warning, creates run-time DNSName
	object with the name "$macro" and marks all rules where it is used
	as broken, that is, rules are colored red and the error message is
	added to the comment field. Using run-time DNSName object makes
	compiler use "$macro" in the generated pf rule which means
	fwbuilder generates exactly the same pf rule as the one it tried
	to import.

	* PFImporterRun.cpp (run): see #2554 "PF import: create groups of
	address objects for macros where possible". Importer for PF
	recognizes macros that define lists of ip addresses, interfaces or
	host names and creates object groups with the same name from them.
	Only macros that contain at least one ip address in the list are
	recognized.

	* PF import: check if a macro used somewhere in the file to be
	imported is actually defined and abort if not

	* PF import: see #2551 making sure rules that have route-to option
	get the call to setRoute() in the importer
